[package]
name = "xynth"
version = "0.1.2"
edition = "2021"
description = "Xynth is an ASIC/GPU-resistant cryptographic hashing algorithm written in pure Rust"
license = "MIT"
repository = "https://github.com/ImmortalOctogen/Xynth"
readme = "README.md"
categories = ["algorithms"] #cryptography
keywords = ["hash", "cryptography", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
hex = "0.4.3"